fix: Correct charset meta tag
The charset meta tag was incorrectly set to "utf-t-8". This commit corrects it to "utf-8" to ensure proper character encoding.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-t-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>C Guide</title>
@@ -22,5 +22,6 @@
 </head>
   <body class="bg-gray-50">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
