feat: Enable in-browser JSX/TSX transpilation
Add Babel CDN script to `index.html` and change the main script's type to `text/babel`. This allows for direct rendering of JSX/TSX in the browser without a build step, facilitating easier development and testing.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
   }
 }
 </script>
+<!-- Add Babel to transpile JSX/TSX in the browser -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-gray-50">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- The script type is changed to "text/babel" so the Babel script can find and transpile it -->
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
